--- a/rustfmt.toml
+++ b/rustfmt.toml
@@ -22,7 +22,7 @@ match_block_trailing_comma = true
 max_width = 80
 merge_derives = true  # def
 newline_style = "Unix"
-normalize_comments = true
+normalize_comments = false
 normalize_doc_attributes = true
 overflow_delimited_expr = true
 remove_nested_parens = true  # def
