Almost done with MVP!
Update to v0.0.9, only thing missing from v0.1.0 (which I am considering
the MVP that will probably be deployed) is actually testing this stuff.

This also finishes filling out the package field in Cargo.toml to get
ready for the MVP release (which I will probably never publish!)

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,12 @@
 [package]
 name = "elgeis-rolesync"
-version = "0.0.1"
+version = "0.0.9"
+authors = ["MithicSpirit <rpc01234@gmail.com>"]
 edition = "2021"
+description = "A Discord bot to synchronize user information from one server to another."
+readme = "README.org"
+repository = "https://github.com/MithicSpirit/elgeis-rolesync"
+license = "AGPL-3.0-only"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
